# smart-organizer

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: package-linux.sh  package-macos.sh
snap/: snapcraft.yaml
snap/gui/: smart-organizer.desktop
snap/local/: launcher.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_sync_meta.sql  0003_story_status.sql  0004_timeline.sql  0005_due_date.sql  0006_notes.sql  0007_note_project.sql  0008_search.sql
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: comments.rs  mod.rs  notes.rs  pairing.rs  projects.rs  search.rs  stories.rs  sync.rs  system.rs  tasks.rs
src-tauri/src/db/: comments.rs  mod.rs  notes.rs  projects.rs  stories.rs  tasks.rs
src-tauri/src/domain/: ids.rs  mod.rs
src-tauri/src/mcp/: client.rs  discovery.rs  mod.rs  pairing.rs  server.rs  tools.rs
src-tauri/src/search/: extract.rs  index.rs  mod.rs  query.rs
src/components/: breadcrumb.tsx  confirm-dialog.tsx  list-section.tsx  resize-handles.tsx  rich-text-field.tsx  timeline.tsx  title-bar.tsx
src/components/editor/: split-editor.tsx
src/components/ui/: button.tsx  (+4 more)
src/i18n/: index.ts
src/lib/: confirm.ts  deadline.ts  tauri.ts  theme.ts
src/routes/: __root.tsx  about.tsx  index.tsx  notes.$noteId.tsx  notes.index.tsx  projects.$projectId.board.tsx  projects.$projectId.index.tsx  projects.$projectId.stories.$storyId.index.tsx  projects.$projectId.stories.$storyId.tasks.$taskId.tsx  projects.$projectId.stories.$storyId.tsx  projects.$projectId.tsx  settings.tsx  system-check.tsx
src/styles/: globals.css
src/test/: setup.ts
(+33 files in other folders)
